Do not return a garbage vnode in vpp if fhtovp fails.

Fixes PR kern/43745 for nfs.